--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             
             <div class="input-group">
                 <label>USERNAME ANDA (Klik untuk copy)</label>
-                <div class="login-info" onclick="copyText('USER-RXC-2026')">
+                <div class="login-info" onclick="copyText('USER-NAMZ-2026')">
                     <span id="user">user-namz-160</span>
                     <small class="badge">COPY</small>
                 </div>
@@ -121,7 +121,7 @@
 
             <div class="input-group">
                 <label>PASSWORD ANDA (Klik untuk copy)</label>
-                <div class="login-info" onclick="copyText('PASS-LITE-99')">
+                <div class="login-info" onclick="copyText('PASS-NAMZ-99')">
                     <span id="pass">pass-namz-160</span>
                     <small class="badge">COPY</small>
                 </div>
@@ -163,4 +163,5 @@
     </script>
 
 </body>
+
 </html>
